Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.169     2025-10-14 02:41:16Z
          - new "GIVING THANKS" section added in woven pod

0.168     2025-08-31 00:35:06Z
          - minting profile updates:
            - pragma boilerplate updated to disable "smartmatch" and "switch"
              features
            - GitHub issues tracker is now the default; added templates for
              pull requests and issues
            - use Test2::V0 in generated tests
            - require latest (at the time) version of this pluginbundle, and
              minimum perl version of 5.020

0.167     2025-05-20 00:01:11Z
          - fix woven pod for irc details when irc channel contains a hyphen

0.166     2025-03-14 19:34:58Z
          - switched from [PodCoverageTests] to [Test::Pod::Coverage::TrustMe]

0.165     2025-01-31 23:32:25Z
          - fixed PAUSE download URI to use https

0.164     2024-11-27 18:20:14Z
          - in recognition of how long tooling has understood how to run
            Build.PL, the default installer is now [ModuleBuildTiny], rather
            than [ModuleBuildTiny::Fallback] and [MakeMaker::Fallback]

0.163     2023-12-09 22:56:32Z
          - .travis.yml file removed from minting profile

0.162     2021-11-28 20:10:01Z
          - now using 're_strict' feature in boilerplate
          - removed podweaver override for "SUPPORT" section, giving
            individual distributions more flexibility

0.161     2021-05-26 03:59:08Z
          - freenode irc channels have migrated to libera

0.160     2021-03-23 20:02:54Z
          - add boilerplate to disable bareword filehandles
          - resolve inconsistency in $VERSION bumping in scripts (by not
            expecting/munging $VERSIONs there)
          - xt/author/changes_has_content.t (generated from
            xt/release/changes_has_content.t) has been removed, as it seems to
            cause confusion on behalf of pull request submitters
