@@ -656,6 +656,18 @@ around add_bundle => sub {
     return $self->$orig($bundle, $payload);
 };
 
+# patch around broken Dist::Zilla 6.034+
+# known affected modules:
+# Dist::Zilla::App::Command::alldeps
+# Dist::Zilla::App::Command::stale
+# Dist::Zilla::Plugin::EnsurePrereqsInstalled
+# Dist::Zilla::Plugin::Prereqs::AuthorDeps
+# Dist::Zilla::Plugin::PromptIfStale
+require Dist::Zilla::Util::AuthorDeps;
+*Dist::Zilla::Util::AuthorDeps::extract_author_deps = \&Dist::Zilla::Util::AuthorDeps::_extract_author_deps
+  if eval { Dist::Zilla::Util::AuthorDeps->VERSION(6.034); 1 }
+    and not Dist::Zilla::Util::AuthorDeps->can('extract_author_deps');
+
 __PACKAGE__->meta->make_immutable;
 __END__
 
